tests/neg-custom-args/captures/i25251.check
-- Error: tests/neg-custom-args/captures/i25251.scala:5:9 --------------------------------------------------------------
5 |    this.g() // error
  |    ^^^^^^
  |    Cannot call update method g of A.this
  |    since the access is in method f, which is not an update method.
-- Error: tests/neg-custom-args/captures/i25251.scala:6:8 --------------------------------------------------------------
6 |    ref.g()  // error
  |    ^^^^^
  |    Cannot call update method g of ref
  |    since the access is in method f, which is not an update method.
